@@ -2,6 +2,7 @@ Revision history for XML-Grammar-Fiction.
 
     * Add more links to the XML::Grammar::Fiction's perldoc.
     * Convert from Mouse to Moo, MooX and "use MooX 'late'".
+    * Add t/00-libxml-basic.t to diagnose the XML::LibXML version.
 
 0.9.3       Tue 31 Jul 09:22:01 IDT 2012
     * Add an explicit version of 0.0301 to File::Find::Object::Rule .
